[gd_scene load_steps=29 format=3 uid="uid://ba1vqv00iyttu"]

[ext_resource type="Script" uid="uid://uvuf4qgkyv3f" path="res://scripts/goblin.gd" id="1_76chb"]
[ext_resource type="Texture2D" uid="uid://dvqfiym4xbte2" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Attack.png" id="2_g1p1y"]
[ext_resource type="Texture2D" uid="uid://cyc1c6h03snba" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Idle.png" id="3_lkl8q"]
[ext_resource type="Texture2D" uid="uid://da1rvqt3jyp6r" path="res://assets/Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Goblin/Run.png" id="4_yyaat"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur2lb"]
atlas = ExtResource("2_g1p1y")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_50ooa"]
atlas = ExtResource("2_g1p1y")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eob20"]
atlas = ExtResource("2_g1p1y")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou0w7"]
atlas = ExtResource("2_g1p1y")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdq1e"]
atlas = ExtResource("2_g1p1y")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy6ml"]
atlas = ExtResource("2_g1p1y")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahxrn"]
atlas = ExtResource("2_g1p1y")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3spnt"]
atlas = ExtResource("2_g1p1y")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57ml"]
atlas = ExtResource("3_lkl8q")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jckb5"]
atlas = ExtResource("3_lkl8q")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_08ru6"]
atlas = ExtResource("3_lkl8q")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_afgjn"]
atlas = ExtResource("3_lkl8q")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ol0"]
atlas = ExtResource("4_yyaat")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq2yq"]
atlas = ExtResource("4_yyaat")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uen5r"]
atlas = ExtResource("4_yyaat")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxvrl"]
atlas = ExtResource("4_yyaat")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_46qq8"]
atlas = ExtResource("4_yyaat")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5x6j"]
atlas = ExtResource("4_yyaat")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwtxg"]
atlas = ExtResource("4_yyaat")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjcj4"]
atlas = ExtResource("4_yyaat")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_32ol0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur2lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50ooa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eob20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou0w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdq1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy6ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahxrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3spnt")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jckb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ru6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afgjn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ol0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq2yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uen5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxvrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46qq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5x6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwtxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjcj4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xq2yq"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uen5r"]
radius = 21.0059

[sub_resource type="CircleShape2D" id="CircleShape2D_lxvrl"]
radius = 46.2669

[node name="goblin" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(0.6, 0.6)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_76chb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_32ol0")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_xq2yq")

[node name="enemy4_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy4_hitbox"]
position = Vector2(-1, 10)
shape = SubResource("CircleShape2D_uen5r")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 9.53674e-07)
shape = SubResource("CircleShape2D_lxvrl")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 0.705882, 0.105882, 1)
offset_left = -6.0
offset_top = -17.0
offset_right = 84.0
offset_bottom = 13.0
scale = Vector2(0.2, 0.2)
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-7, 26)

[connection signal="body_entered" from="enemy4_hitbox" to="." method="_on_enemy_4_hitbox_body_entered"]
[connection signal="body_exited" from="enemy4_hitbox" to="." method="_on_enemy_4_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
